--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "homepage" : "http://ommastic.github.io/muheez-internship"
+
   },
   "eslintConfig": {
     "extends": [
